<resources>
    <string name="app_name">Forager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="intro">Intro</string>
    <string name="register"><u>Register</u></string>
    <string name="copy_rights">Copyright 2015 ForagerPro.\nAll Rights Reserved.</string>
    <string name="title_activity_register">Register</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Preferred Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="sign_btn">Sign In</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="submit_btn">Submit</string>
    <string name="save_btn">Save</string>
    <string name="next_btn">Next</string>
    <string name="i_agree_btn">I Agree, Create my Meal Plan!</string>
    <string name="cancel_btn">Cancel</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_fragment_shop_meal">Your Meal Plan</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forgot Your Password?</string>
    <string name="signin_password_hint">Enter Your Password</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="forgot_noworries">Forgot your password? No worries! Enter your email address below and we will send it to you.</string>
    <string name="new_password_btn">New Password</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_profile">Create Your Profile</string>
    <string name="name_hint">Enter Your Name</string>
    <string name="birthdate_hint">Enter Your Birthdate</string>
    <string name="country_hint">Enter Your Country</string>
    <string name="country">Country</string>
    <string name="dob">Date of Birth</string>
    <string-array name="months_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="units">Units</string>
    <string name="age">Age</string>
    <string name="age_hint">Years</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="weight_hint_ussystem">lbs</string>
    <string name="height_hint_ussystem">ft - inch</string>
    <string name="weight_hint_metric">kg</string>
    <string name="height_hint_metric">cm</string>
    <string name="gender">Gender</string>
    <string name="activity_level">Activity level</string>
    <string name="your_daily_calo">Your daily caloric needs</string>
    <string name="your_daily_hint">Kcal</string>
    <string name="title_activity_body_composition">Your Body Composition</string>
    <string-array name="units_array">
        <item>Metric</item>
        <item>U.S. System</item>
    </string-array>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="activity_level_array">
        <item>Little to no exercise</item>
        <item>1-3 Workouts per week</item>
        <item>3-5 Workouts per week</item>
        <item>6-7 Workouts per week</item>
        <item>Workout twice a day</item>
    </string-array>
    <string name="title_activity_goal">What is your Goal?</string>
    <string name="choose_goal_hint">Choose a goal</string>
    <string name="btn_create_meal">Create Your Meal Plan</string>
    <string name="need_consume">You need to consume</string>
    <string name="mainain_weight">to maintain your current weight</string>
    <string name="reach_goal">to reach your goal of</string>
    <string-array name="choose_goal_array_ussystem">
        <item>Maintain Weight</item>
        <item>Lose 1 lb of fat per week</item>
        <item>Lose 2 lb of fat per week</item>
        <item>Gain 1 lb of muscle per month</item>
        <item>Gain 2 lb of muscle per month</item>
        <item>Aggressive Mass Gain</item>
    </string-array>
    <string-array name="choose_goal_array_metric">
        <item>Maintain Weight</item>
        <item>Lose .45 Kg of fat per week</item>
        <item>Lose .90 Kg of fat per week</item>
        <item>Gain .45 Kg of muscle per month</item>
        <item>Gain .90 Kg of muscle per month</item>
        <item>Aggressive Mass Gain</item>
    </string-array>
    <string-array name="goal_array_ussystem_value">
        <item>to maintain your current weight.</item>
        <item>losing 1 lb of fat per week.</item>
        <item>losing 2 lb of fat per week.</item>
        <item>gaining 1 lb of muscle per month.</item>
        <item>gaining 2 lb of muscle per month.</item>
        <item>gaining of muscle per month.</item>
    </string-array>
    <string-array name="goal_array_metric_value">
        <item>to maintain your current weight.</item>
        <item>losing .45 Kg of fat per week.</item>
        <item>losing .90 Kg of fat per week.</item>
        <item>gaining .45 Kg of muscle per month.</item>
        <item>gaining .90 Kg of muscle per month.</item>
        <item>gaining of muscle per month.</item>
    </string-array>
    <string name="title_activity_terms_and_conditions">Terms And Conditions</string>
    <string name="agree_terms"><b>Agreement between users and ForagerPro.com and Forager Mobile Application</b></string>
    <string name="more">More</string>
    <string name="about">About</string>
    <string name="upgrade">Upgrade</string>
    <string name="more_change_password">Password</string>
    <string name="blog">Blog </string>
    <string name="works">Video</string>
    <string name="feedback">Feedback</string>
    <string name="change_password">Change Password</string>
    <string name="terms_and_conditions">Terms</string>
    <string name="share">Share</string>
    <string name="sign_out">Signout</string>
    <string name="terms_conditions">Terms &amp; conditions</string>
</resources>