<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffe3f0a4">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/twenty">

        <ImageView
            android:layout_width="@dimen/thirty"
            android:layout_height="@dimen/thirty"
            android:id="@+id/imageView"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:id="@+id/textView"
            android:textSize="25sp"
            android:textColor="#ff000000"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:textIsSelectable="false"
            android:typeface="monospace"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="left|center_horizontal"
        android:layout_marginTop="@dimen/ten">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <Button
                android:layout_width="@dimen/two_fifty"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:id="@+id/btn_about"
                android:layout_gravity="center_horizontal"
                android:background="@color/btn_sign"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/ten"
                android:textColor="@color/btn_sign_text_color" />

            <Button
                android:layout_width="@dimen/two_fifty"
                android:layout_height="wrap_content"
                android:text="@string/works"
                android:id="@+id/btn_works"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/ten"
                android:layout_gravity="center_horizontal"
                android:background="@color/btn_sign"
                android:textColor="@color/btn_sign_text_color"/>
            <Button
                android:layout_width="@dimen/two_fifty"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:id="@+id/btn_feedback"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/ten"
                android:layout_gravity="center_horizontal"
                android:background="@color/btn_sign"
                android:textColor="@color/btn_sign_text_color"
                />
            <Button
                android:layout_width="@dimen/two_fifty"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:id="@+id/btn_share"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/ten"
                android:layout_gravity="center_horizontal"
                android:background="@color/btn_sign"
                android:textColor="@color/btn_sign_text_color"
                />
            <Button
                android:layout_width="@dimen/two_fifty"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:id="@+id/btn_change_password"
                android:layout_marginTop="@dimen/ten"
                android:textAllCaps="false"
                android:layout_gravity="center_horizontal"
                android:background="@color/btn_sign"
                android:textColor="@color/btn_sign_text_color" />
            <Button
                android:layout_width="@dimen/two_fifty"
                android:layout_height="wrap_content"
                android:text="@string/terms_conditions"
                android:id="@+id/btn_terms_conditions"
                android:layout_gravity="center_horizontal"
                android:background="@color/btn_sign"
                android:textColor="@color/btn_sign_text_color"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/ten" />
            <Button
                android:layout_width="@dimen/two_fifty"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:id="@+id/btn_sign_out"
                android:layout_gravity="center_horizontal"
                android:background="@color/btn_sign"
                android:textColor="@color/btn_sign_text_color"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/ten"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>