<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.forager.meal.ui.activity.SignInActivity">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_alignTop="@+id/title_signin"
        android:layout_alignBottom="@+id/title_signin"
        android:src="@drawable/back"/>

    <TextView
        android:id="@+id/title_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_sign_in"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:layout_alignParentTop="true"/>


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/fifty"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:paddingLeft="@dimen/five"
        android:textColorHint="@color/text_hint_color"
        android:textCursorDrawable="@drawable/cursor_blue"
        style="@style/editText"
        android:layout_below="@+id/title_signin"
        android:hint="@string/email_hint"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/ten"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:paddingLeft="@dimen/five"
        android:singleLine="true"
        android:textColorHint="@color/text_hint_color"
        android:textCursorDrawable="@drawable/cursor_blue"
        android:inputType="textPassword"
        style="@style/editText"
        android:layout_below="@+id/edit_name"
        android:hint="@string/signin_password_hint"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/chckbox_remember_me"
        android:layout_below="@+id/edit_password"
        android:layout_marginTop="@dimen/ten"
        android:layout_centerHorizontal="true"
        android:text="@string/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_forget_password"
        android:layout_below="@+id/chckbox_remember_me"
        android:layout_marginTop="@dimen/ten"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:textColor="@color/btn_sign_text_color"
        android:clickable="true"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"/>

    <Button
        android:id="@+id/sign_btn"
        android:layout_marginTop="@dimen/twenty"
        android:layout_below="@+id/txt_forget_password"
        android:layout_width="match_parent"
        android:background="@color/btn_sign"
        android:textColor="@color/btn_sign_text_color"
        android:layout_alignLeft="@+id/edit_name"
        android:layout_alignRight="@+id/edit_name"
        android:layout_height="wrap_content"
        android:text="@string/sign_btn"
        android:gravity="center" />

</RelativeLayout>
