<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.forager.meal.ui.activity.ForgotPasswordActivity">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_alignTop="@+id/title_forgot"
        android:layout_alignBottom="@+id/title_forgot"
        android:src="@drawable/back"/>

    <TextView
        android:id="@+id/title_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_forgot_password"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/txt_forget_conten"
        android:layout_below="@+id/title_forgot"
        android:layout_marginTop="@dimen/ten"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:clickable="true"
        android:layout_height="wrap_content"
        android:text="@string/forgot_noworries"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/fifty"
        android:layout_marginLeft="@dimen/twenty"
        android:layout_marginRight="@dimen/twenty"
        style="@style/editText"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txt_forget_conten"
        android:hint="@string/email_hint"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/newpassword_btn"
        android:layout_width="match_parent"
        android:text="@string/new_password_btn"
        android:layout_marginTop="@dimen/twenty"
        android:textColor="@color/btn_sign_text_color"
        android:layout_alignLeft="@+id/edit_name"
        android:layout_alignRight="@+id/edit_name"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/btn_sign"
        android:layout_below="@+id/edit_name"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="match_parent"
        android:text="@string/cancel_btn"
        android:layout_marginTop="@dimen/ten"
        android:layout_below="@+id/newpassword_btn"
        android:gravity="center"
        android:layout_alignLeft="@+id/edit_name"
        android:layout_alignRight="@+id/edit_name"
        android:textColor="@color/btn_sign_text_color"
        android:textStyle="bold"
        android:background="@color/btn_sign"
        android:layout_height="wrap_content" />

</RelativeLayout>
