<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.forager.meal.ui.activity.RegisterActivity">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_alignTop="@+id/title_register"
        android:layout_alignBottom="@+id/title_register"
        android:src="@drawable/back"/>

    <TextView
        android:id="@+id/title_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_btn"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"

        android:textAppearance="@android:style/TextAppearance.Large"
        android:layout_alignParentTop="true"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/fifty"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="10dp"
        android:layout_centerHorizontal="true"
        android:paddingLeft="@dimen/five"
        android:textColorHint="@color/text_hint_color"
        android:textCursorDrawable="@drawable/cursor_blue"
        style="@style/editText"
        android:layout_below="@+id/title_register"
        android:hint="@string/email_hint"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        style="@style/editText"
        android:paddingTop="@dimen/ten"
        android:paddingBottom="@dimen/ten"
        android:textColorHint="@color/text_hint_color"
        android:paddingLeft="@dimen/five"
        android:layout_marginTop="@dimen/ten"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:layout_below="@+id/edit_email"
        android:textCursorDrawable="@drawable/cursor_blue"
        android:hint="@string/password_hint"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_confirm_password"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        style="@style/editText"
        android:layout_marginTop="@dimen/ten"
        android:layout_marginLeft="@dimen/ten"
        android:textColorHint="@color/text_hint_color"
        android:layout_marginRight="@dimen/ten"
        android:paddingLeft="@dimen/five"
        android:layout_below="@+id/edit_password"
        android:textCursorDrawable="@drawable/cursor_blue"
        android:hint="@string/confirm_password_hint"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:text="@string/submit_btn"
        android:layout_marginTop="@dimen/twenty"
        android:layout_alignLeft="@+id/edit_email"
        android:layout_alignRight="@+id/edit_email"
        android:textColor="@color/btn_sign_text_color"

        android:paddingTop="@dimen/five"
        android:paddingBottom="@dimen/five"
        android:background="@color/btn_sign"
        android:layout_below="@+id/edit_confirm_password"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="match_parent"
        android:text="@string/cancel_btn"
        android:layout_marginTop="@dimen/ten"
        android:layout_below="@+id/submit_btn"
        android:paddingTop="@dimen/five"
        android:paddingBottom="@dimen/five"
        android:layout_alignLeft="@+id/edit_email"
        android:layout_alignRight="@+id/edit_email"
        android:textColor="@color/btn_sign_text_color"
        android:background="@color/btn_sign"
        android:layout_height="wrap_content" />
</RelativeLayout>
